packages/tree-sitter-talon/tree_sitter_talon-1007.3.2.0-cp39-cp39-win_amd64.whl/tree_sitter_talon/data/tree-sitter-talon/test/corpus/knausj_talon/contexts.txt
================================================================================
1. Context knausj_talon/settings.talon
================================================================================

-

--------------------------------------------------------------------------------

(source_file
  (matches))

================================================================================
2. Context knausj_talon/misc/splits.talon
================================================================================

tag: user.splits
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/misc/messaging.talon
================================================================================

tag: user.messaging
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/misc/chapters.talon
================================================================================

tag: user.chapters
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/misc/abbreviate.talon
================================================================================

-

--------------------------------------------------------------------------------

(source_file
  (matches))

================================================================================
6. Context knausj_talon/misc/help_scope_open.talon
================================================================================

mode: user.help_scope
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/misc/git_add_patch.talon
================================================================================

tag: terminal
and tag: user.git
title: /git add .*\-p/
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/misc/git.talon
================================================================================

tag: terminal
and tag: user.git
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/misc/tabs.talon
================================================================================

tag: user.tabs
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/misc/multiple_cursors.talon
================================================================================

tag: user.multiple_cursors
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/misc/pages.talon
================================================================================

tag: user.pages
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/misc/help_open.talon
================================================================================

mode: user.help
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/misc/mouse_cursor.talon
================================================================================

tag: user.mouse_cursor_commands_enable
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/draft_editor/draft_editor.talon
================================================================================

user.draft_editor_running: True
not tag: user.draft_editor_app_focused
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/draft_editor/draft_editor_open.talon
================================================================================

tag: user.draft_editor_active
and tag: user.draft_editor_app_focused
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/modes/dictation_mode.talon
================================================================================

mode: dictation
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/modes/dragon_modes.talon
================================================================================

#defines modes specific to Dragon.
speech.engine: dragon
mode: all
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (comment)
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/modes/sleep_mode.talon
================================================================================

mode: sleep
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/modes/modes.talon
================================================================================

not mode: sleep
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/modes/wake_up.talon
================================================================================

#defines the commands that sleep/wake Talon
mode: all
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (comment)
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/modes/sleep_mode_wav2letter.talon
================================================================================

mode: sleep
speech.engine: wav2letter
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/emoji/emoji.talon
================================================================================

tag: user.emoji
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/talon_draft_window/draft_window_open.talon
================================================================================

# These are available when the draft window is open, but not necessarily focussed
tag: user.draft_window_showing
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (comment)
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/talon_draft_window/draft_window.talon
================================================================================

# These are active when we have focus on the draft window
title:Talon Draft
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (comment)
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/talon_draft_window/draft_global.talon
================================================================================

# These are available globally (in command mode)
mode: command
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (comment)
    (match
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/lang/terraform/terraform.talon
================================================================================

tag: user.terraform
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/lang/talon/talon.talon
================================================================================

tag: user.talon
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/lang/vimscript/vimscript.talon
================================================================================

tag: user.vimscript
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/lang/go/go.talon
================================================================================

tag: user.go
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/lang/proto/proto.talon
================================================================================

tag: user.protobuf
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/lang/python/python.talon
================================================================================

tag: user.python
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/lang/css/css.talon
================================================================================

tag: user.css
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/lang/markdown/markdown.talon
================================================================================

tag: user.markdown
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/lang/typescript/typescript.talon
================================================================================

tag: user.typescript
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/lang/typescript/typescriptreact.talon
================================================================================

tag: user.typescriptreact
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/lang/rust/rust.talon
================================================================================

tag: user.rust
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/lang/r/r.talon
================================================================================

tag: user.r
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/lang/java/java.talon
================================================================================

tag: user.java
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/lang/php/php.talon
================================================================================

tag: user.php
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/lang/tags/comment_block.talon
================================================================================

tag: user.code_comment_block
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/lang/tags/comment_documentation.talon
================================================================================

tag: user.code_comment_documentation
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/lang/tags/keywords.talon
================================================================================

tag: user.code_keywords
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/lang/tags/functions_common.talon
================================================================================

tag: user.code_functions_common
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/lang/tags/comment_line.talon
================================================================================

tag: user.code_comment_line
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/lang/tags/data_null.talon
================================================================================

tag: user.code_data_null
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/lang/tags/object_oriented.talon
================================================================================

tag: user.code_object_oriented
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/lang/tags/data_bool.talon
================================================================================

tag: user.code_data_bool
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/lang/tags/library_gui_open.talon
================================================================================

tag: user.code_libraries_gui_showing
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/lang/tags/operators_lambda.talon
================================================================================

tag: user.code_operators_lambda
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/lang/tags/operators_array.talon
================================================================================

tag: user.code_operators_array
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/lang/tags/operators_math.talon
================================================================================

tag: user.code_operators_math
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/lang/tags/libraries.talon
================================================================================

tag: user.code_libraries
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/lang/tags/functions_common_gui_active.talon
================================================================================

tag: user.code_functions_common_gui_active
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/lang/tags/functions.talon
================================================================================

tag: user.code_functions
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/lang/tags/operators_assignment.talon
================================================================================

tag: user.code_operators_assignment
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/lang/tags/imperative.talon
================================================================================

tag: user.code_imperative
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/lang/tags/operators_bitwise.talon
================================================================================

tag: user.code_operators_bitwise
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/lang/tags/libraries_gui.talon
================================================================================

tag: user.code_libraries_gui
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/lang/tags/operators_pointer.talon
================================================================================

tag: user.code_operators_pointer
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/lang/scala/scala.talon
================================================================================

tag: user.scala
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/lang/batch/batch.talon
================================================================================

tag: user.batch
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/lang/csharp/csharp.talon
================================================================================

tag: user.csharp
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/lang/javascript/javascript.talon
================================================================================

tag: user.javascript
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/lang/javascript/javascriptreact.talon
================================================================================

tag: user.javascriptreact
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/lang/c/c.talon
================================================================================

tag: user.c
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/lang/ruby/ruby.talon
================================================================================

tag: user.ruby
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/lang/sql/sql.talon
================================================================================

tag: user.sql
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/text/numbers.talon
================================================================================

not tag: user.mouse_grid_showing
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/text/homophones_open.talon
================================================================================

mode: user.homophones
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/text/find_and_replace.talon
================================================================================

tag: user.find_and_replace
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/text/line_commands.talon
================================================================================

tag: user.line_commands
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/apps/firefox/firefox.talon
================================================================================

app: firefox
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/apps/anaconda/anaconda.talon
================================================================================

tag: terminal
and tag: user.anaconda
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/apps/kindle/kindle.talon
================================================================================

app: kindle
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/apps/terraform/terraform.talon
================================================================================

tag: terminal
and tag: user.terraform_client
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/apps/generic_browser.talon
================================================================================

tag: browser
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context knausj_talon/apps/calibre/calibre_viewer.talon
================================================================================

app: calibre_viewer
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context knausj_talon/apps/okular/okular.talon
================================================================================

app: okular
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context knausj_talon/apps/platforms/win/wsl/wsl.talon
================================================================================

# NOTE: to use these commands you will need to activate the tag below in whatever contexts you
# choose.
#
# do this in a separate .talon file or via python. for example, if you use windows terminal for
# wsl then you might do this:
#
#    os: windows
#    app: windows_terminal
#    -
#    tag(): user.wsl
#
# however, if you also use windows terminal for other things (powershell), you will want something
# more specific...like this:
#
#    os: windows
#    app: windows_terminal
#    title: /^WSL:/
#    -
#    tag(): user.wsl
#
# then, you will need to find a way to set the window title accordingly. for example, to match
# the title pattern above, you can set the prompt in your .bashrc file like this:
#
#    PS1="\[\e]0;${debian_chroot:+($debian_chroot)}WSL:${WSL_DISTRO_NAME} \u@\h: \w\a\]$PS1"
#
# ALSO: if you do populate your window title with your distro name, make sure the 'wsl_title_regex'
# value in wsl.py is set accordingly.
tag: user.wsl
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (comment)
    (match
      (identifier)
      (implicit_string))))

================================================================================
0. Context knausj_talon/apps/platforms/win/windows_terminal/windows_terminal.talon
================================================================================

app: windows_terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
1. Context knausj_talon/apps/platforms/win/sumatrapdf/sumatrapdf.talon
================================================================================

app: sumatrapdf
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context knausj_talon/apps/platforms/win/explorer/explorer.talon
================================================================================

app: windows_explorer
app: windows_file_browser
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context knausj_talon/apps/platforms/win/powershell/power_shell.talon
================================================================================

os: windows
and app.name: Windows PowerShell
os: windows
and app.exe: powershell.exe
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
4. Context knausj_talon/apps/platforms/win/nitro_reader/nitro_reader_5.talon
================================================================================

app: nitro_reader_five
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context knausj_talon/apps/platforms/win/outlook/outlook.talon
================================================================================

os: windows
and app: Outlook
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
6. Context knausj_talon/apps/platforms/mac/iterm/iterm.talon
================================================================================

os: mac
app: iterm2
-

